# SokolTriangle_CPP

./: :  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.5EE8E95F3C5E876A.idx  sokol_app.h.E77E52184338AABF.idx  sokol_gfx.h.B04040C2FD312B59.idx  sokol_log.h.3FC3D2C319A3F364.idx
src/: main.cpp
